--- a/forklift_control/config/forklift_control.yaml
+++ b/forklift_control/config/forklift_control.yaml
@@ -21,7 +21,7 @@ forklift:
     wheel_separation : 0.98778
     wheel_radius : 0.33
 
-    base_frame_id: 'forklift_body'
+    base_frame_id: 'base_link'
     cmd_vel_timeout: 0.25
     k_l: 0.1
     k_r: 0.1
