--- a/forklift_control/config/forklift_control.yaml
+++ b/forklift_control/config/forklift_control.yaml
@@ -15,8 +15,11 @@ forklift:
     type: "diff_drive_controller/DiffDriveController"
     left_wheel: wheelFL_joint
     right_wheel: wheelFR_joint
-    pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 0.03]
-    twist_covariance_diagonal: [0.001, 0.001, 0.001, 1000000.0, 1000000.0, 0.03]
+    #pose_covariance_diagonal: [0.001, 0.001, 1000000.0, 1000000.0, 1000000.0, 0.03]
+    #twist_covariance_diagonal: [0.001, 0.001, 0.001, 1000000.0, 1000000.0, 0.03]
+    pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+    enable_odom_tf: false
     
     wheel_separation : 0.98778
     wheel_radius : 0.33
